# contact_center

./: .gitignore  README.md  Utterance_Clustering_Pipeline.pptx  clustering_analysis.ipynb  clustering_analysis_v2.ipynb  clustering_v2_changelog.ipynb  eda_customer_support.ipynb  finetune_embeddings.ipynb  finetune_methodology.ipynb  main.py  pyproject.toml
